--- a/main_app/templates/artist_detail.html
+++ b/main_app/templates/artist_detail.html
@@ -85,7 +85,17 @@
             <input
             class="input"
             type="number"
-            name="length"
+            name="minutes"
+            placeholder="Length in Minutes"
+            min="1"
+            required
+            />
+        </div>
+        <div class="control">
+            <input
+            class="input"
+            type="number"
+            name="seconds"
             placeholder="Length in Seconds"
             min="1"
             required
